# django-payments-razorpay

./: .pre-commit-config.yaml  .travis.yml  LICENSE  README.md  setup.cfg  setup.py  tox.ini
.github/workflows/: build.yml  linters.yml
django_payments_razorpay/: __init__.py  forms.py  provider.py  widgets.py
tests/: __init__.py  conftest.py  models.py  settings.py  test_forms.py  test_provider.py  test_widgets.py
