[metadata]
name = django_payments_razorpay
version = 1.0
description = Razorpay provider for django-payments
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/NyanKiyoshi/django-payments-razorpay
author = Mikail Kocak
author_email = hello@vanille.bid
maintainer = Mikail Kocak
maintainer_email = hello@vanille.bid
license = BSD-3-Clause
license_file = LICENSE
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules
keywords = django, payments, razorpay, django-payments
packages =
    django_payments_razorpay
project_urls =
    Source=https://github.com/NyanKiyoshi/django-payments-razorpay
    Tracker=https://github.com/NyanKiyoshi/django-payments-razorpay/issues

[options]
python_requires = >=3.8

[coverage:run]
branch = 1
source = django_payments_razorpay

[coverage:report]
exclude_lines =
    pragma: no cover
    raise NotImplementedError
    return NotImplemented
    if TYPE_CHECKING:

[isort]
skip =
    .direnv
    .tox
    .venv
not_skip = __init__.py
multi_line_output = 3
include_trailing_comma = True
line_length = 88
known_first_party = django_payments_razorpay

[flake8]
max-line-length = 88
